--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
       cursor:pointer;
       color:#306108;
       font-family:Arial;
+      font-size:15px;
       font-weight:bold;
       padding:6px 24px;
       text-decoration:none;
